<resources>
    <string name="app_name">IntelligentGarden</string>
    <string name="welcome_message">Bienvenue sur Smart Garden !</string>
    <string name="devise">Le temps c\'est de la vie, nous vous la facilitons</string>
    <string name="title_garden">Votre jardin actuel</string>
    <string name="envoyer_message">Vous voulez envoyer un message ?</string>
    <string name="parametre">Paramètres</string>
    <string name="c_est_parti">C\'est parti</string>
    <string name="optimiser_et_vender_vos_r_coltes_en_toute_simplicit">Optimiser et vender vos récoltes en toute simplicité</string>

    <string name="authentificator_app">Authentificator App</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="create_new_account">Create new account</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="allready_registred_login_here">Allready registred ? Login here</string>
    <string name="action_settings">Settings</string>

    <string name="add_plant">Add Plant</string>
    <string name="my_garden">My Garden</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="edit_surface">Edit Surface</string>

    <string-array name="rows_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="cols_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string name="title_activity_display_garden">DisplayGardenActivity</string>
    <string name="title_activity_edit_surface">EditSurfaceActivity</string>
    <string name="title_activity_add_plant">AddPlantActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="welcome_to_the_home_page">Welcome to the home page</string>
    <string name="logout">LOGOUT</string>
    <string name="thank_you_for_your_purchase">Thank you for your purchase!</string>
    <string name="home">Home</string>
    <string name="select_enemies">Select Enemies</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
</resources>